--- a/src/app/components/my-listings-page/my-listings-page.component.html
+++ b/src/app/components/my-listings-page/my-listings-page.component.html
@@ -1,9 +1,9 @@
 <div class="content-box" *ngFor="let listing of listing">
-    <p>{{ listing?.name}}</p>
-    <p>{{ listing?.description}}</p>
-    <p>{{ listing?.price}}</p>
+    <p>{{ listing?.name }}</p>
+    <p>{{ listing?.description }}</p>
+    <p>{{ listing?.price }}</p>
     <div class="button-container">
-        <a routerLink="/edit-listing/{{ listing?.id}}">
+        <a routerLink="/edit-listings/{{ listing.id }}">
             <button>Edit</button>
         </a>
         <button (click)="onDelete(listing.id)">Delete</button>
