add connection to backed

--- a/src/app/components/edit-listing-page/edit-listing-page.component.html
+++ b/src/app/components/edit-listing-page/edit-listing-page.component.html
@@ -5,6 +5,7 @@
     [currentName]="listing.name"
     [currentDescription]="listing.description"
     [currentPrice]="listing.price"
+    [currentViews]="listing.views"
     (onSubmit)="onSubmit()"
     ></app-listing-data-form>
 </div>>
