--- a/src/app/components/listing-detail-page/listing-detail-page.component.html
+++ b/src/app/components/listing-detail-page/listing-detail-page.component.html
@@ -2,10 +2,11 @@
     <a routerLink="/listings">
         <button>Back</button>
     </a>
-    <h2>{{ listing?.name}}</h2>
-    <p>{{ listing?.description}}</p>
-    <p>{{ listing?.price}}</p>
-    <a routerLink="/content/{{ listing?.id}}">
+    <h2>{{ listing.name}}</h2>
+    <p>{{ listing.description}}</p>
+    <p>${{ listing.price}}</p>
+    <p>{{ listing.views}}</p>
+    <a routerLink="/content/{{ listing.id }}">
         <button>Content seller</button>
     </a>
 </div>
