--- a/src/app/components/edit-listing-page/edit-listing-page.component.html
+++ b/src/app/components/edit-listing-page/edit-listing-page.component.html
@@ -1,4 +1,4 @@
-<div class="content-box">
+<div class="content-box" *ngIf="listing">
     <h2>Edit Listing</h2>
     <app-listing-data-form 
     buttonText="Save Changes"
