--- a/src/app/components/listings-page/listings-page.component.html
+++ b/src/app/components/listings-page/listings-page.component.html
@@ -1,6 +1,6 @@
 <div>
     <div class="content-box" *ngFor="let listing of listings">
-        <a routerLink="/listings/{{listing.id}}"></a>
-        <h3>{{ listing.name }} - {{ listing.price}}</h3>
+        <a routerLink="/listings/{{listing?.id}}"></a>
+        <h3>{{ listing?.name }} - {{ listing?.price}}</h3>
     </div>
 </div>
